--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p><dd>I like to read books on <a href="https://www.getepic.com/app/search">epic</a>.</dd></p>
     <p><dd>I also like to ride my bike, watch TV,</dd></p>
     <p><dd>and search things on <a href="https://www.google.com/">google</a>.</dd></p>
-    <p><img scr="images/mansion.jpeg" alt="A minecraft mansion." width="600" height="450" /></p>
+    <p><img src="images/mansion.jpeg" alt="A minecraft mansion." width="600" height="450" /></p>
 </body>
 </html>
