--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Website</title>
+    <title>Andrew's Contact</title>
     <style type="text/css">
-        img {
-            float: left;
-        }
         body {
             background-color: white;
+        }
+        img {
+            float: left;
+            margin: 10;
         }
         h4 {
             background-color: white;
@@ -33,7 +34,7 @@
         h2{
             background-color: white;
             margin: 0;
-            text-align: left;
+            text-align-last: left;
         }
         .toplink:hover {
             color: springgreen;
@@ -57,37 +58,35 @@
             text-align: left;
             width: auto;
             overflow: hidden;
-        }
+        } 
     </style>
 </head>
 <body>
     <h1>Andrew's-Website
-        <a class="homelink" href="file:///Users/Andrew/Documents/AndrewWebsite/index.html">Home</a> 
+        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/index.html">Home</a> 
         <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/projects.html">Projects</a>
         <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/blog.html">Blog</a>
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/contact.html">Contact</a>
+        <a class="homelink" href="file:///Users/Andrew/Documents/AndrewWebsite/contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
         <h3 class="mainContentItem">
-            <img src="images/goten.png" width="100">
-            Hello! Welcome to my website.<br />
-            In this website, you can check<br />
-            out all my projects and get to<br />
-            know a little about me.<br />
-            Enjoy!
+        <img src="images/goten.png" width="100">
+        Hello! My name is Andrew<br />
+        Linag. This is my first website.<br />
+        In this website, you can check<br />
+        out all my projects and get to<br />
+        know a little about me.<br />
+        Enjoy!
         </h3>
         <hr />
-        <h2 class="mainContentItem">About Me</h2>
-        <h4 class="mainContentItem">My name is Andrew Liang, and I am currently 9
-        years old. I go to school at sunny hills elementary
-        school. I like to read books, ride my bike, and play
-        on the computer in my freetime. I want to be an
-        engineer when I grow up because I like to play on
-        the computer. My favorite series is <i>Dog Man</i>, 
-        <i>Dragon Ball</i>, and <i>Diary of Steve the Noob</i>.
-        I also play <i>Minecraft</i> when I have time.
-        </h4>
+        <h2 class="mainContentItem">Contact Me</h2>
+        <blockquote>
+        <h4 class="mainContentItem">Andrew Liang</h4>
+        <h4 class="mainContentItem">Sammamish, WA, USA</h4>
+        <h4 class="mainContentItem">Email: <a href="mailto:andrewjsliang@gmail.com">andrewjsliang@gmail.com</a></h4>
+        </blockquote>
+    </div>
     </div>
 </body>
 </html>
