--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,10 @@
 </head>
 <body>
     <h1>Andrew's-Website
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/index.html">Home</a> 
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/projects.html">Projects</a>
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/blog.html">Blog</a>
-        <a class="homelink" href="file:///Users/Andrew/Documents/AndrewWebsite/contact.html">Contact</a>
+        <a class="toplink" href="index.html">Home</a> 
+        <a class="toplink" href="projects.html">Projects</a>
+        <a class="toplink" href="blog.html">Blog</a>
+        <a class="homelink" href="contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
