--- a/projects.html
+++ b/projects.html
@@ -67,10 +67,10 @@
 </head>
 <body>
     <h1>Andrew's-Website
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/index.html">Home</a> 
-        <a class="homelink" href="file:///Users/Andrew/Documents/AndrewWebsite/projects.html">Projects</a>
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/blog.html">Blog</a>
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/contact.html">Contact</a>
+        <a class="toplink" href="index.html">Home</a> 
+        <a class="homelink" href="projects.html">Projects</a>
+        <a class="toplink" href="blog.html">Blog</a>
+        <a class="toplink" href="contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
@@ -90,15 +90,15 @@
         <blockquote>
         <h4 class="mainContentItem">
             | 1
-             | <a class="alllinks" href="file:///Users/Andrew/Documents/AndrewWebsite/projects2.html">2</a>
-             | Back | <a class="alllinks" href="file:///Users/Andrew/Documents/AndrewWebsite/projects2.html">Next</a> |
+             | <a class="alllinks" href="projects2.html">2</a>
+             | Back | <a class="alllinks" href="projects2.html">Next</a> |
         </h4>
         </blockquote>
         <hr />
         <div class="mainContent">
             <h4 class="mainContentItem">
             <img src="images/list_picture.png" width="200">
-            <a class="alllinks" href="file:///Users/Andrew/Documents/AndrewWebsite/projects/lists.html">
+            <a class="alllinks" href="projects/lists.html">
             Scrambled eggs</a> is a website
             that teaches you how to make
             delicious scrambled eggs.
@@ -115,7 +115,7 @@
         <div class="mainContent">
             <h4 class="mainContentItem">
             <img src="images/Snake.png" width="200">
-            <a class="alllinks" href="file:///Users/Andrew/Documents/AndrewWebsite/projects/snake.html">Snake</a>
+            <a class="alllinks" href="projects/snake.html">Snake</a>
             is a game using html and javascript.
             It's basically a game that there is
             a snake and an apple. You can use
