--- a/projects2.html
+++ b/projects2.html
@@ -67,10 +67,10 @@
 </head>
 <body>
     <h1>Andrew's-Website
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/index.html">Home</a> 
-        <a class="homelink" href="file:///Users/Andrew/Documents/AndrewWebsite/projects.html">Projects</a>
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/blog.html">Blog</a>
-        <a class="toplink" href="file:///Users/Andrew/Documents/AndrewWebsite/contact.html">Contact</a>
+        <a class="toplink" href="index.html">Home</a> 
+        <a class="homelink" href="projects.html">Projects</a>
+        <a class="toplink" href="blog.html">Blog</a>
+        <a class="toplink" href="contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
@@ -89,9 +89,9 @@
         <h4 class="mainContentItem">Page 2 of 2</h4>
         <blockquote>
         <h4 class="mainContentItem">
-            | <a class="alllinks" href="file:///Users/Andrew/Documents/AndrewWebsite/projects.html">1</a>
+            | <a class="alllinks" href="projects.html">1</a>
              | 2
-             | <a class="alllinks" href="file:///Users/Andrew/Documents/AndrewWebsite/projects.html">Back</a>
+             | <a class="alllinks" href="projects.html">Back</a>
              | Next |
         </h4>
         </blockquote>
@@ -112,7 +112,7 @@
         <div class="mainContent">
             <h4 class="mainContentItem">
                 <img src="images/hangman.png" width="200">
-                <a class="alllinks" href="file:///Users/Andrew/Documents/AndrewWebsite/projects/prompt.html">Hangman</a>
+                <a class="alllinks" href="projects/prompt.html">Hangman</a>
                 is a game using html and javascript.
                 Basically, you guess a word
                 by typing letters in a random
