--- a/AndrewHTML/Images/images.html
+++ b/AndrewHTML/Images/images.html
@@ -5,13 +5,12 @@
     <body>
         <h1>
             <img src="logo.png"
-                alt="From A to Zucchini" 
-                width="800" />
+                alt="From A to Zucchini" />
         </h1>
           <img src="chocolate-island.jpeg"
             alt="Chocolate Islands"
-            title="Chocolate Islands Individual Cakes" 
-            width="800" height="500" />
+            title="Chocolate Islands Individual Cakes"
+            width="450" />
           
     </body>
 </html>
