--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             line-height: 70px;
             text-align: center;
             margin: 0;
-            word-spacing: 3em;
+            word-spacing: 1em;
         }
         h2{
             background-color: white;
@@ -80,13 +80,13 @@
         <hr />
         <h2 class="mainContentItem">About Me</h2>
         <h4 class="mainContentItem">My name is Andrew Liang, and I am currently 9
-        years old. I go to school at sunny hills elementary
-        school. I like to read books, ride my bike, and play
+        years old. I go to school at Sunny Hills Elementary
+        School. I like to read books, ride my bike, and play
         on the computer in my freetime. I want to be an
         engineer when I grow up because I like to play on
         the computer. My favorite series is <i>Dog Man</i>, 
         <i>Dragon Ball</i>, and <i>Diary of Steve the Noob</i>.
-        I also play <i>Minecraft</i> when I have time.
+        I also play <i>Minecraft</i> and watch TV when I have time.
         </h4>
     </div>
 </body>
