--- a/lists.html
+++ b/lists.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Scrambled Eggs</h1>
-        <p><img src="scrambled-eggs.jpeg" width="150" height="100" /></p>
+        <p><img src="projects/scrambled-eggs.jpeg" width="150" height="100" /></p>
         <p>Eggs are one of my favorite food. Here is a recipe for delicious rich scrambled eggs.</p>
         <h2>Ingredients</h2>
         <ul>
@@ -24,7 +24,9 @@
                 to cook on the plate until served)</li>
             <li>Enjoy!</li>
         <hr />
-        <p><a href="file:///Users/Andrew/Documents/AndrewWebsite/projects.html">Back</a></p>
+        <form>
+            <input type="button" onclick="window.location.href='projects.html'" value="Back" />
+        </form>
         </ol>
     </body>
 </html>
