--- a/snake.html
+++ b/snake.html
@@ -164,5 +164,8 @@ document.addEventListener('keydown', function(e) {
 // start the game
 requestAnimationFrame(loop);
 </script>
+<form>
+  <input type="button" onclick="window.location.href='projects.html'" value="Back" />
+</form>
 </body>
 </html>
