--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             line-height: 70px;
             text-align: center;
             margin: 0;
-            word-spacing: 3em;
+            word-spacing: 1em;
         }
         h2{
             background-color: white;
@@ -86,11 +86,12 @@
         <hr />
         <h2 class="mainContentItem">Projects</h2>
         <h4 class="mainContentItem">Here are some of my projects.</h4>
-        <h4 class="mainContentItem">Page 1 of 2</h4>
+        <h4 class="mainContentItem">Page 1 of 3</h4>
         <blockquote>
         <h4 class="mainContentItem">
             | 1
              | <a class="alllinks" href="projects2.html">2</a>
+             | <a class="alllinks" href="projects3.html">3</a>
              | Back | <a class="alllinks" href="projects2.html">Next</a> |
         </h4>
         </blockquote>
@@ -98,7 +99,7 @@
         <div class="mainContent">
             <h4 class="mainContentItem">
             <img src="images/list_picture.png" width="200">
-            <a class="alllinks" href="projects/lists.html">
+            <a class="alllinks" href="lists.html">
             Scrambled eggs</a> is a website
             that teaches you how to make
             delicious scrambled eggs.
@@ -115,7 +116,7 @@
         <div class="mainContent">
             <h4 class="mainContentItem">
             <img src="images/Snake.png" width="200">
-            <a class="alllinks" href="projects/snake.html">Snake</a>
+            <a class="alllinks" href="snake.html">Snake</a>
             is a game using html and javascript.
             It's basically a game that there is
             a snake and an apple. You can use
