--- a/projects2.html
+++ b/projects2.html
@@ -29,7 +29,7 @@
             line-height: 70px;
             text-align: center;
             margin: 0;
-            word-spacing: 3em;
+            word-spacing: 1em;
         }
         h2{
             background-color: white;
@@ -86,13 +86,14 @@
         <hr />
         <h2 class="mainContentItem">Projects</h2>
         <h4 class="mainContentItem">Here are some of my projects.</h4>
-        <h4 class="mainContentItem">Page 2 of 2</h4>
+        <h4 class="mainContentItem">Page 2 of 3</h4>
         <blockquote>
         <h4 class="mainContentItem">
             | <a class="alllinks" href="projects.html">1</a>
              | 2
+             | <a class="alllinks" href="projects3.html">3</a>
              | <a class="alllinks" href="projects.html">Back</a>
-             | Next |
+             | <a class="alllinks" href="projects3.html">Next</a> |
         </h4>
         </blockquote>
         <hr />
@@ -112,7 +113,7 @@
         <div class="mainContent">
             <h4 class="mainContentItem">
                 <img src="images/hangman.png" width="200">
-                <a class="alllinks" href="projects/prompt.html">Hangman</a>
+                <a class="alllinks" href="prompt.html">Hangman</a>
                 is a game using html and javascript.
                 Basically, you guess a word
                 by typing letters in a random
@@ -135,6 +136,25 @@
             </h4>
         </div>
         <hr />
+        <div class="mainContent">
+            <h4 class="mainContentItem">
+                <img src="treasure.png" width="200">
+                <a class="alllinks" href="treasure.html">Treasure hunt</a>
+                is a game that uses HTML and javascript.
+                This game is like a treasure hunt.
+                You click on the map to guess where the treasure is.
+                Treasure hunt uses the hot and cold clue.
+                Basically, when it writes cold, really cold,
+                or freezing, it tells you that you are far away
+                from the treasure. When it says warm, hot, really
+                hot, or boiling hot, that means that you are close
+                to the treasure. Once you clicked the treasure, it
+                will say that you found the treasure in how many clicks
+                it took for you to find the treasure.  
+                Click on next round to
+                change the treasure spot.
+            </h4>
+        </div>
     </div>
 </body>
 </html>
