Added arts and other updates

--- a/art.html
+++ b/art.html
@@ -46,6 +46,9 @@
             color: white;
             text-decoration: none;
         }
+        .alllinks {
+            color: blue;
+        }
         .homelink {
             color: springgreen;
             text-decoration: none;
@@ -64,40 +67,35 @@
 </head>
 <body>
     <h1>Andrew's-Website
-        <a class="homelink" href="index.html">Home </a> 
+        <a class="toplink" href="index.html">Home </a> 
         <a class="toplink" href="projects.html">Projects</a>
         <a class="toplink" href="blog.html">Blog</a>
-        <a class="toplink" href="art.html">Arts</a>
+        <a class="homelink" href="art.html">Arts</a>
         <a class="toplink" href="contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
         <h3 class="mainContentItem">
             <img src="images/skeppy.png" width="110">
-            Hello! Welcome to my website.<br />
-            In this website, you can check<br />
-            out all my projects and get to<br />
-            know a little about me. I<br />
-            am not going to force you to<br />
-            read it. Enjoy!<br />
+            Hello! As you read in the home<br />
+            page, I have art class. Here is<br />
+            some of the art from the art class<br />
+            that I made. I took a few classes<br />
+            to finish each one so I hope you<br />
+            like it. Enjoy!<br />
         </h3>
         <hr />
-        <h2 class="mainContentItem">About Me</h2>
-        <h4 class="mainContentItem">My name is Andrew Liang, and I am currently 10
-        years old. I go to school at Sunny Hills Elementary
-        School. I like to read books, ride my bike, and play
-        on the computer in my freetime. My favorite sport
-        is swimming. I used to play basketball and swimming
-        but because of covid and classes I stopped. Speaking
-        of classes, I have piano, clarinet, chinese, art, 
-        swimming (and swim team), Kumon, math, and
-        ski classes. Of course, I also have school. I used
-        to have coding classes, but again, because of time,
-        I don't have it now. One thing I like is reading.
-        My favorite books is the <i>Rick Riordan</i> books
-        and <i>Stuart Gibbs</i> books. I also play Minecraft
-        and watch Youtube when I have time.
+        <h2 class="mainContentItem">My Art</h2>
+        <h4 class="mainContentItem">Here are some of my artwork.</h4>
+        <h4 class="mainContentItem">Page 1 of 2</h4>
+        <blockquote>
+        <h4 class="mainContentItem">
+            | Art (page 1)
+             | <a class="alllinks" href="piano.html">Piano (page 2) </a>
+             |
         </h4>
+        </blockquote>
+        <hr />
     </div>
 </body>
 </html>
