--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         }
         img {
             float: left;
-            margin: 10;
+            margin: 10px;
         }
         h4 {
             background-color: white;
@@ -66,24 +66,24 @@
         <a class="toplink" href="index.html">Home</a> 
         <a class="toplink" href="projects.html">Projects</a>
         <a class="toplink" href="blog.html">Blog</a>
+        <a class="toplink" href="art.html">Arts</a>
         <a class="homelink" href="contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
         <h3 class="mainContentItem">
-        <img src="images/goten.png" width="100">
+        <img src="images/skeppy.png" width="95">
         Hello! My name is Andrew<br />
-        Linag. This is my first website.<br />
-        In this website, you can check<br />
-        out all my projects and get to<br />
-        know a little about me.<br />
-        Enjoy!
+        Liang. This is where you<br />
+        I don't know WHY you would<br />
+        contact me at all, but here<br />
+        it is.<br />
         </h3>
         <hr />
         <h2 class="mainContentItem">Contact Me</h2>
         <blockquote>
-        <h4 class="mainContentItem">Andrew Liang</h4>
-        <h4 class="mainContentItem">Sammamish, WA, USA</h4>
+        <h4 class="mainContentItem">Name: Andrew Liang</h4>
+        <h4 class="mainContentItem">Adrdess (not specific): Sammamish, WA, USA</h4>
         <h4 class="mainContentItem">Email: <a href="mailto:andrewjsliang@gmail.com">andrewjsliang@gmail.com</a></h4>
         </blockquote>
     </div>
