--- a/projects.html
+++ b/projects.html
@@ -70,21 +70,23 @@
         <a class="toplink" href="index.html">Home</a> 
         <a class="homelink" href="projects.html">Projects</a>
         <a class="toplink" href="blog.html">Blog</a>
+        <a class="toplink" href="art.html">Arts</a>
         <a class="toplink" href="contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
         <h3 class="mainContentItem">
-            <img src="images/goten.png" width="100">
+            <img src="images/skeppy.png" width="125">
             Hello! My name is Andrew<br />
-            Linag. This is my first website.<br />
-            In this website, you can check<br />
-            out all my projects and get to<br />
-            know a little about me.<br />
-            Enjoy!
+            Liang. This is a few of my<br />
+            projects. I don't code a lot<br />
+            now, so these are a few years<br />
+            old. Most of these are from<br />
+            classes homework and book<br />
+            tutorials. Enjoy!<br />
         </h3>
         <hr />
-        <h2 class="mainContentItem">Projects</h2>
+        <h2 class="mainContentItem">My Projects</h2>
         <h4 class="mainContentItem">Here are some of my projects.</h4>
         <h4 class="mainContentItem">Page 1 of 3</h4>
         <blockquote>
