--- a/prompt.html
+++ b/prompt.html
@@ -21,7 +21,27 @@
 			"rainbow",
 			"thousands",
 			"python",
-			"snake"
+			"snake",
+			"Brian",
+			"Mumbo Jumbo",
+			"ImpulseSV",
+			"Bumbo",
+			"Iskall",
+			"Xisuma",
+			"Stress",
+			"Tango",
+			"Grian",
+			"AA12",
+			"Rage",
+			"Action",
+			"Tim",
+			"Moby",
+			"The Button",
+			"Hermitcraft",
+			"Realms SMP",
+			"NHO",
+			"Revolution",
+			"Python"
 		];
 
 		var word = words[Math.floor(Math.random() * words.length)];
