--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
         }
         img {
             float: left;
-            margin: 10;      
+            margin: 10px;      
         }
         h4 {
             background-color: white;
@@ -58,6 +58,7 @@
             text-align: left;
             width: auto;
             overflow: hidden;
+            margin: auto;
         }
     </style>
 </head>
@@ -66,20 +67,21 @@
         <a class="toplink" href="index.html">Home</a> 
         <a class="toplink" href="projects.html">Projects</a>
         <a class="homelink" href="blog.html">Blog</a>
+        <a class="toplink" href="art.html">Arts</a>
         <a class="toplink" href="contact.html">Contact</a>
     </h1>
     <hr />
     <div class="mainContent">
         <h3 class="mainContentItem">
-        <img src="images/goten.png" width="100">
+        <img src="images/skeppy.png" width="95">
         Hello! My name is Andrew<br />
-        Linag. This is my first website.<br />
-        In this website, you can check<br />
-        out all my projects and get to<br />
-        know a little about me.<br />
-        Enjoy!
+        Liang. This is a blog I<br />
+        made. There is currently<br />
+        nothing in this blog.<br />
+        So, don't look here.<br />
         </h3>
         <hr />
+        <h2 class="mainContentItem">My Blog</h2>
     </div>
 </body>
 </html>
