--- a/piano.html
+++ b/piano.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Website</title>
+    <title>Andrew's Projects</title>
     <style type="text/css">
+        body {
+            background-color: white;
+        }
         img {
             float: left;
             margin: 10px;
         }
-        body {
-            background-color: white;
-        }
         h4 {
             background-color: white;
-            margin: 0;
+            margin: 10;
             text-align: center;
             vertical-align: text-bottom;
         }
@@ -34,7 +34,7 @@
         h2{
             background-color: white;
             margin: 0;
-            text-align: left;
+            text-align: center;
         }
         .toplink:hover {
             color: springgreen;
@@ -50,6 +50,9 @@
             color: springgreen;
             text-decoration: none;
         }
+        .alllinks {
+            color: blue;
+        }
         .mainContent {
             width: 500px;
             margin: auto;
@@ -64,8 +67,8 @@
 </head>
 <body>
     <h1>Andrew's-Website
-        <a class="homelink" href="index.html">Home </a> 
-        <a class="toplink" href="projects.html">Projects</a>
+        <a class="toplink" href="index.html">Home</a> 
+        <a class="homelink" href="projects.html">Projects</a>
         <a class="toplink" href="blog.html">Blog</a>
         <a class="toplink" href="art.html">Arts</a>
         <a class="toplink" href="contact.html">Contact</a>
@@ -74,30 +77,24 @@
     <div class="mainContent">
         <h3 class="mainContentItem">
             <img src="images/skeppy.png" width="110">
-            Hello! Welcome to my website.<br />
-            In this website, you can check<br />
-            out all my projects and get to<br />
-            know a little about me. I<br />
-            am not going to force you to<br />
-            read it. Enjoy!<br />
+            Hello! My name is Andrew<br />
+            Liang. You know I play piano.<br />
+            Here are some things from<br />
+            my few years of playing<br />
+            piano. You do not have to<br />
+            look at this. Enjoy!<br />
         </h3>
         <hr />
-        <h2 class="mainContentItem">About Me</h2>
-        <h4 class="mainContentItem">My name is Andrew Liang, and I am currently 10
-        years old. I go to school at Sunny Hills Elementary
-        School. I like to read books, ride my bike, and play
-        on the computer in my freetime. My favorite sport
-        is swimming. I used to play basketball and swimming
-        but because of covid and classes I stopped. Speaking
-        of classes, I have piano, clarinet, chinese, art, 
-        swimming (and swim team), Kumon, math, and
-        ski classes. Of course, I also have school. I used
-        to have coding classes, but again, because of time,
-        I don't have it now. One thing I like is reading.
-        My favorite books is the <i>Rick Riordan</i> books
-        and <i>Stuart Gibbs</i> books. I also play Minecraft
-        and watch Youtube when I have time.
+        <h2 class="mainContentItem">My Piano Suff</h2>
+        <h4 class="mainContentItem">Here are some of my piano stuff.</h4>
+        <h4 class="mainContentItem">Page 2 of 2</h4>
+        <blockquote>
+        <h4 class="mainContentItem">
+            | <a class="alllinks" href="art.html">Art (page 1)</a>
+             | Piano (page 2) |
         </h4>
+        </blockquote>
+        <hr />
     </div>
 </body>
 </html>
