Added art and edited home page

--- a/AndrewHTML/Canvas/canvas.html
+++ b/AndrewHTML/Canvas/canvas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
     <title>Canvas</title>
 </head>
 
