--- a/art.html
+++ b/art.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
     <title>Andrew's Website</title>
     <style type="text/css">
         img {
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -76,13 +77,13 @@
     <hr />
     <div class="mainContent">
         <h3 class="mainContentItem">
-            <img src="images/skeppy.png" width="110">
+            <img src="images/skeppy.png" width="120">
             Hello! As you read in the home<br />
-            page, I have art class. Here is<br />
+            page, I have art class. Here are<br />
             some of the art from the art class<br />
-            that I made. I took a few classes<br />
-            to finish each one so I hope you<br />
-            like it. Enjoy!<br />
+            that I made. I hope you like<br />
+            them (I also made some of them<br />
+            at my house). Enjoy!<br />
         </h3>
         <hr />
         <h2 class="mainContentItem">My Art</h2>
@@ -95,6 +96,35 @@
              |
         </h4>
         </blockquote>
+        <hr />
+        <h3 class="mainContentItem">Acrylic</h3>
+        <h4 class="mainContentItem">
+            <img src="images/IMG-2189.jpg" width="490"><br />
+            <img src="images/IMG-2186.jpg" width="490"><br />
+            <img src="images/IMG-2187.jpg" width="490"><br />
+            <img src="images/IMG-2188.jpg" width="490"><br />
+            <img src="images/IMG-2185.jpg" width="490"><br />
+            <img src="images/IMG-2190.jpg" width="490"><br />
+            <img src="images/IMG-2191.jpg" width="490"><br />
+            <img src="images/image_50438913.JPG" width="490"><br />
+        </h4>
+        <hr />
+        <h3 class="mainContentItem">Sketch</h3>
+        <h4 class="mainContentItem">
+            <img src="images/IMG_1325.jpeg" width="490"><br />
+            <img src="images/IMG_1326.jpeg" width="490"><br />
+            <img src="images/IMG_1327.jpeg" width="490"><br />
+            <img src="images/IMG_1328.jpeg" width="490"><br />
+            <img src="images/IMG_1330.jpeg" width="490"><br />
+            <img src="images/IMG_1331.jpeg" width="490"><br />
+        </h4>
+        <hr />
+        <h3 class="mainContentItem">Drawings</h3>
+        <h4 class="mainContentItem">
+            <img src="images/image_50396417.JPG" width="300"><br />
+            <img src="images/IMG_1320.jpeg" width="300"><br />
+            <img src="images/IMG_1323.jpeg" width="300"><br />
+        </h4>
         <hr />
     </div>
 </body>
