--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Blog</title>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
+    <title>Andrew's Website</title>
     <style type="text/css">
         body {
             background-color: white;
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -82,6 +83,15 @@
         </h3>
         <hr />
         <h2 class="mainContentItem">My Blog</h2>
+        </blockquote>
+            <h4 class="mainContentItem">
+                Hello hello please go to another<br />
+                page, since there is currently<br />
+                nothing in this page; it is under<br />
+                construction, I guess.
+            </h4>
+        </blockquote>
+        <img src="images/realconstruction.jpeg" width="300">
     </div>
 </body>
 </html>
