--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Contact</title>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
+    <title>Andrew's Website</title>
     <style type="text/css">
         body {
             background-color: white;
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -83,7 +84,7 @@
         <h2 class="mainContentItem">Contact Me</h2>
         <blockquote>
         <h4 class="mainContentItem">Name: Andrew Liang</h4>
-        <h4 class="mainContentItem">Adrdess (not specific): Sammamish, WA, USA</h4>
+        <h4 class="mainContentItem">Address (not specific): Sammamish, WA, USA</h4>
         <h4 class="mainContentItem">Email: <a href="mailto:andrewjsliang@gmail.com">andrewjsliang@gmail.com</a></h4>
         </blockquote>
     </div>
