--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
     <title>Andrew's Website</title>
     <style type="text/css">
         img {
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -73,30 +74,29 @@
     <hr />
     <div class="mainContent">
         <h3 class="mainContentItem">
-            <img src="images/skeppy.png" width="110">
+            <img src="images/skeppy.png" width="95">
             Hello! Welcome to my website.<br />
             In this website, you can check<br />
             out all my projects and get to<br />
-            know a little about me. I<br />
-            am not going to force you to<br />
-            read it. Enjoy!<br />
+            know a little about me. <br />
+            Enjoy!!!!!!!<br />
         </h3>
         <hr />
         <h2 class="mainContentItem">About Me</h2>
         <h4 class="mainContentItem">My name is Andrew Liang, and I am currently 10
-        years old. I go to school at Sunny Hills Elementary
+        years old, and I go to school at Sunny Hills Elementary
         School. I like to read books, ride my bike, and play
         on the computer in my freetime. My favorite sport
-        is swimming. I used to play basketball and swimming
-        but because of covid and classes I stopped. Speaking
-        of classes, I have piano, clarinet, chinese, art, 
+        is swimming. I used to play basketball and soccor
+        but because of covid and time issues I temporarily stopped.
+        I have piano, clarinet, chinese, art, 
         swimming (and swim team), Kumon, math, and
         ski classes. Of course, I also have school. I used
         to have coding classes, but again, because of time,
-        I don't have it now. One thing I like is reading.
-        My favorite books is the <i>Rick Riordan</i> books
-        and <i>Stuart Gibbs</i> books. I also play Minecraft
-        and watch Youtube when I have time.
+        I don't have it now. One thing I like to do is read.
+        My favorite books are books by <i>Rick Riordan</i>
+        and <i>Stuart Gibbs</i>. I also play Minecraft
+        and watch Youtube when I have time. The end. 
         </h4>
     </div>
 </body>
