--- a/piano.html
+++ b/piano.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Projects</title>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
+    <title>Andrew's Website</title>
     <style type="text/css">
         body {
             background-color: white;
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -68,9 +69,9 @@
 <body>
     <h1>Andrew's-Website
         <a class="toplink" href="index.html">Home</a> 
-        <a class="homelink" href="projects.html">Projects</a>
+        <a class="toplink" href="projects.html">Projects</a>
         <a class="toplink" href="blog.html">Blog</a>
-        <a class="toplink" href="art.html">Arts</a>
+        <a class="homelink" href="art.html">Arts</a>
         <a class="toplink" href="contact.html">Contact</a>
     </h1>
     <hr />
@@ -95,6 +96,16 @@
         </h4>
         </blockquote>
         <hr />
+        <h3 class="mainContentItem">My Awards</h3>
+        <blockquote>
+        <div class="mainContentItem">
+            (Newest to oldest)<br />
+            Silver Medal 2021 Bach Festival<br />
+            Silver Medal 2021 Classical Viennese Festival<br />
+            Bronze Medal 2020 Bach Festival<br />
+            Honorable Mention 2020 Classical Viennese Festival<br />
+        </div>
+        </blockquote>
     </div>
 </body>
 </html>
