--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Projects</title>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
+    <title>Andrew's Website</title>
     <style type="text/css">
         body {
             background-color: white;
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -120,7 +121,7 @@
             <img src="images/Snake.png" width="200">
             <a class="alllinks" href="snake.html">Snake</a>
             is a game using html and javascript.
-            It's basically a game that there is
+            Its a game in which there is
             a snake and an apple. You can use
             the arrow keys to control the
             snake. Every time you eat an
@@ -143,6 +144,8 @@
                 Every time you shoot down a round,
                 everything gets faster. The ships on
                 the top left corner are how many ships there.
+                This can not be played on google so this
+                is just the code on <a class="alllinks" href="https://github.com">Github</a>.
             </h4>
         </div>
         <hr />
@@ -151,13 +154,14 @@
                 <img src="images/volcano.png" width="200">
                 <a class="alllinks" href="https://github.com/andrewjsliang/AlienVolcano">Alien volcano</a>
                 is a simulator that uses python.
-                It basically simulates a
-                moon volcano erupting. It shows
-                the kind of gas that there is.
+                It simulates a moon volcano
+                erupting, so don't expect it
+                to be exciting. It shows the
+                kind of gas that there is.
                 The eruption basically starts
                 small and gets big like normal
-                volcanos. When the eruption goes
-                everywhere, it stops getting bigger.
+                volcanos. When the eruption gets
+                super big, it stops getting bigger.
             </h4>
         </div>
     </div>
