--- a/projects2.html
+++ b/projects2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Projects</title>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
+    <title>Andrew's Website</title>
     <style type="text/css">
         body {
             background-color: white;
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -109,6 +110,7 @@
                 You have to use the paddle to
                 keep the ball in the air. If the ball
                 touches the ground, the game is over.
+                This was from a book tutorial.
             </h4>
         </div>
         <hr />
@@ -120,7 +122,8 @@
                 Basically, you guess a word
                 by typing letters in a random
                 word and you keep type words
-                until you guessed it.
+                until you guessed it. This is from
+                a coding class homework.
             </h4>
         </div>
         <hr />
@@ -134,7 +137,8 @@
                 satellite has an error and you can
                 use the arrow keys to correct the orbit.
                 If the satellite gets to far or enters
-                the atmosphere, the orbit fails.
+                the atmosphere, the orbit fails. This
+                was from a coding class homework.
             </h4>
         </div>
         <hr />
@@ -154,7 +158,7 @@
                 will say that you found the treasure in how many clicks
                 it took for you to find the treasure.  
                 Click on next round to
-                change the treasure spot.
+                change the treasure spot. This is also from coding class homework.
             </h4>
         </div>
     </div>
