--- a/projects3.html
+++ b/projects3.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Andrew's Projects</title>
+    <link rel="shortcut icon" href="images/sahara-logo (1).png" />
+    <title>Andrew's Website</title>
     <style type="text/css">
         body {
             background-color: white;
@@ -17,7 +18,7 @@
             vertical-align: text-bottom;
         }
         h3 {
-            color: blue;
+            color: black;
             background-color: white;
             margin: 0;
             text-align: center;
@@ -103,13 +104,14 @@
             <h4 class="mainContentItem">
                 <img src="images/Mr.stickman.png" width="200">
                 <a class="alllinks" href="https://github.com/andrewjsliang/Stickman">Mr.Stick Man Races for the Exit</a>
-                is a game that uses python. Basically, you
+                is a game that uses python. To begin with, you
                 control the stick man by using the arrow
                 keys. You jump by pressing the space bar.
                 You can hop on the platforms. If you jump
                 from a high place, you die. You can press
                 the restart button on the button to play
                 again. If you reach the door, you win.
+                This is from a book tutorial.
             </h4>
         </div>
 </body>
