--- a/lists.html
+++ b/lists.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="shortcut icon" href="images/sahara-logo (1).png" />
         <title>Scrambled Eggs</title>
     </head>
     <body>
