--- a/treasure.html
+++ b/treasure.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Find the buried treasure</title>
+	<link rel="shortcut icon" href="images/sahara-logo (1).png" />
+	<title>Find the buried treasure</title>
 </head>
 <body>
 
