edited contact and deleted images

--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,8 @@
         <img src="images/skeppy.png" width="95">
         Hello! My name is Andrew<br />
         Liang. This is where you<br />
-        I don't know WHY you would<br />
-        contact me at all, but here<br />
-        it is.<br />
+        can contact me, I guess,<br />
+        and here it is.<br />
         </h3>
         <hr />
         <h2 class="mainContentItem">Contact Me</h2>
